<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StreamClient</string>
    <string name="action_settings">Settings</string>
    <string name="action_reconnect">Reconnect</string>
    <string name="select">Select</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="play">Play</string>
    <string name="record">REC</string>
    <string name="artist">Artist</string>
    <string name="search">Search</string>
    <string name="title">Title</string>
    <string name="song">a song</string>
    <string name="stop">Stop</string>
    <string name="serverStatus">Server status:</string>
    <string name="disconnected">Disconnected</string>
    <string name="connectionTo">Connection to</string>
    <string name="success">was successful</string>
    <string name="fail">failed</string>
    <string name="disconnectedReasonServer">Check your internet connection.\n\nIf you have access to internet,\nthen the server may be unavailable at the moment.\nTry again later.</string>
    <string name="disconnectedReasonCast">The ICE interface does not match</string>
    <string name="connecting">Connecting</string>
    <string name="connected">Connected</string>
    <string name="loading">Loading</string>
    <string name="address">Address</string>
    <string name="port">Port</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="builtin">Built-in</string>
    <string name="pocketsphinx">PocketSphinx</string>
    <string name="speeral">Speeral</string>
    <string name="audioRecordChoice">AudioRecorder choice</string>
</resources>
