<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="zouxe.streamclient.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/artistAddText"
        android:enabled="false"
        android:width="150dp"
        android:hint="@string/artist"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titleAddText"
        android:enabled="false"
        android:width="150dp"
        android:hint="@string/title"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:layout_alignTop="@+id/artistAddText"
        android:layout_alignRight="@+id/searchButton"
        android:layout_alignEnd="@+id/searchButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:enabled="false"
        android:id="@+id/addButton"
        android:imeOptions="actionDone"
        android:layout_below="@+id/artistAddText"
        android:layout_centerHorizontal="true"
        android:onClick="add" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/artistSearchText"
        android:enabled="false"
        android:hint="@string/artist"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:layout_below="@+id/addButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/addButton"
        android:layout_toLeftOf="@+id/addButton" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titleSearchText"
        android:enabled="false"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:layout_alignTop="@+id/artistSearchText"
        android:layout_toRightOf="@+id/artistSearchText"
        android:layout_toEndOf="@+id/artistSearchText"
        android:layout_toLeftOf="@+id/searchButton"
        android:layout_toStartOf="@+id/searchButton"
        android:hint="@string/title" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:enabled="false"
        android:id="@+id/searchButton"
        android:imeOptions="actionDone"
        android:layout_alignBottom="@+id/artistSearchText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="search" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select"
        android:enabled="false"
        android:id="@+id/controlButton"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/artistAddText"
        android:layout_alignEnd="@+id/artistAddText"
        android:onClick="play" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:choiceMode="singleChoice"
        android:layout_below="@+id/searchButton"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/controlButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song"
        android:enabled="false"
        android:id="@+id/removeButton"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/addButton"
        android:layout_toEndOf="@+id/addButton"
        android:onClick="remove" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="start"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/serverStatus"
        android:id="@+id/serverStatus"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/titleAddText"
        android:layout_alignEnd="@+id/titleAddText"
        android:singleLine="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record"
        android:id="@+id/recordButton"
        android:onClick="record"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/controlButton"
        android:layout_toStartOf="@+id/controlButton" />

</RelativeLayout>
